Update 2 - Add Library ScheduleDataGenerator
ScheduleDataGenerator was added

--- a/Test1/Test1.csproj
+++ b/Test1/Test1.csproj
@@ -42,13 +42,17 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="TestConsole2">
+      <HintPath>C:\Users\VI\Documents\Visual Studio 2012\Projects\TestConsole2\TestConsole2\obj\Debug\TestConsole2.dll</HintPath>
+    </Reference>
+    <Reference Include="ScheduleDataGenerator">
+      <HintPath>C:\Users\VI\Documents\Visual Studio 2012\Projects\ScheduleDataGenerator\ScheduleDataGenerator\obj\Debug\ScheduleDataGenerator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\ScheduleItem.cs" />
-    <Compile Include="Model\AppointmentItem.cs" />
     <Compile Include="CustomAdapters\AppointmentAdapter.cs" />
     <Compile Include="EndlessScrollView.cs" />
   </ItemGroup>
