--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../Test1_IOS.UITests/packages.config" />
+  <repository path="../Test1_IOS/packages.config" />
   <repository path="..\Test1.UITests\packages.config" />
 </repositories>
